// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryListSelectors should handle pending state on a product ID: pending 1`] = `
Object {
  "error": false,
  "fulfilled": false,
  "itemCount": 0,
  "listData": Array [],
  "pending": true,
  "status": undefined,
}
`;

exports[`InventoryListSelectors should map a fulfilled product ID response to an aggregated output: fulfilled 1`] = `
Object {
  "error": false,
  "fulfilled": true,
  "itemCount": 0,
  "listData": Array [
    Object {
      "cores": 2,
      "displayName": "db.lorem.com",
      "hardwareType": "physical",
      "insightsId": "d6214a0b-b344-4778-831c-d53dcacb2da3",
      "inventoryId": null,
      "lastSeen": "17 days ago",
      "numberOfGuests": null,
      "sockets": 1,
      "subscriptionManagerId": null,
    },
    Object {
      "cores": 2,
      "displayName": "db.ipsum.com",
      "hardwareType": "physical",
      "insightsId": "9358e312-1c9f-42f4-8910-dcef6e970852",
      "inventoryId": null,
      "lastSeen": "in a month",
      "numberOfGuests": null,
      "sockets": 1,
      "subscriptionManagerId": null,
    },
  ],
  "pending": false,
  "status": undefined,
}
`;

exports[`InventoryListSelectors should pass minimal data on a product ID without a product ID provided: no product id error 1`] = `
Object {
  "error": false,
  "fulfilled": false,
  "itemCount": 0,
  "listData": Array [],
  "pending": false,
  "status": undefined,
}
`;

exports[`InventoryListSelectors should pass minimal data on missing a reducer response: missing reducer error 1`] = `
Object {
  "error": false,
  "fulfilled": false,
  "itemCount": 0,
  "listData": Array [],
  "pending": false,
  "status": undefined,
}
`;

exports[`InventoryListSelectors should populate data from the in memory cache: cached data: ERROR, query mismatch 1`] = `
Object {
  "error": false,
  "fulfilled": true,
  "itemCount": 0,
  "listData": Array [
    Object {
      "cores": 2,
      "displayName": "db.ipsum.com",
      "hardwareType": "physical",
      "insightsId": "9358e312-1c9f-42f4-8910-dcef6e970852",
      "inventoryId": null,
      "lastSeen": "in a month",
      "numberOfGuests": null,
      "sockets": 1,
      "subscriptionManagerId": null,
    },
  ],
  "pending": false,
  "status": undefined,
}
`;

exports[`InventoryListSelectors should populate data from the in memory cache: cached data: cache used and pending 1`] = `
Object {
  "error": false,
  "fulfilled": true,
  "itemCount": 0,
  "listData": Array [
    Object {
      "cores": 2,
      "displayName": "db.lorem.com",
      "hardwareType": "physical",
      "insightsId": "d6214a0b-b344-4778-831c-d53dcacb2da3",
      "inventoryId": null,
      "lastSeen": "17 days ago",
      "numberOfGuests": null,
      "sockets": 1,
      "subscriptionManagerId": null,
    },
  ],
  "pending": false,
  "status": undefined,
}
`;

exports[`InventoryListSelectors should populate data from the in memory cache: cached data: initial fulfilled 1`] = `
Object {
  "error": false,
  "fulfilled": true,
  "itemCount": 0,
  "listData": Array [
    Object {
      "cores": 2,
      "displayName": "db.lorem.com",
      "hardwareType": "physical",
      "insightsId": "d6214a0b-b344-4778-831c-d53dcacb2da3",
      "inventoryId": null,
      "lastSeen": "17 days ago",
      "numberOfGuests": null,
      "sockets": 1,
      "subscriptionManagerId": null,
    },
  ],
  "pending": false,
  "status": undefined,
}
`;

exports[`InventoryListSelectors should populate data from the in memory cache: cached data: updated and fulfilled 1`] = `
Object {
  "error": false,
  "fulfilled": true,
  "itemCount": 0,
  "listData": Array [
    Object {
      "cores": 2,
      "displayName": "db.ipsum.com",
      "hardwareType": "physical",
      "insightsId": "9358e312-1c9f-42f4-8910-dcef6e970852",
      "inventoryId": null,
      "lastSeen": "in a month",
      "numberOfGuests": null,
      "sockets": 1,
      "subscriptionManagerId": null,
    },
  ],
  "pending": false,
  "status": undefined,
}
`;

exports[`InventoryListSelectors should populate data on a product ID when the api response is missing expected properties: data populated, missing properties 1`] = `
Object {
  "error": false,
  "fulfilled": true,
  "itemCount": 0,
  "listData": Array [
    Object {
      "cores": 2,
      "displayName": null,
      "hardwareType": null,
      "insightsId": "d6214a0b-b344-4778-831c-d53dcacb2da3",
      "inventoryId": null,
      "lastSeen": "in a year",
      "numberOfGuests": null,
      "sockets": 1,
      "subscriptionManagerId": null,
    },
    Object {
      "cores": null,
      "displayName": "db.example.com",
      "hardwareType": "physical",
      "insightsId": "9358e312-1c9f-42f4-8910-dcef6e970852",
      "inventoryId": null,
      "lastSeen": "in a month",
      "numberOfGuests": null,
      "sockets": null,
      "subscriptionManagerId": null,
    },
  ],
  "pending": false,
  "status": undefined,
}
`;

exports[`InventoryListSelectors should return specific selectors: selectors 1`] = `
Object {
  "inventoryList": [Function],
  "makeInventoryList": [Function],
}
`;
